[RemoveUnusedFields] Fix immutability errors in visitor